--- a/package.json
+++ b/package.json
@@ -10,6 +10,21 @@
   "keywords": [],
   "author": "Joan Boronat",
   "devDependencies": {
-    "electron": "~1.6.2"
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "electron": "~1.6.2",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "webpack": "^3.0.0"
+  },
+  "dependencies": {
+    "electron-native-notification": "^1.2.0",
+    "node-xlsx": "^0.7.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1"
   }
 }
