--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "electron-dev": "set ELECTRON_START_URL=http://localhost:8080 && electron ."
   },
   "repository": "https://github.com/JoanBoronat/dedicationapp",
   "keywords": [],
@@ -18,7 +19,8 @@
     "babel-preset-react": "^6.24.1",
     "electron": "~1.6.2",
     "extract-text-webpack-plugin": "^2.1.2",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
     "electron-native-notification": "^1.2.0",
