--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "electron-native-notification": "^1.2.0",
+    "electron-settings": "^3.1.1",
     "node-xlsx": "^0.7.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
