--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "electron": "~1.6.2",
     "extract-text-webpack-plugin": "^2.1.2",
     "webpack": "^3.0.0",
